# sp202606

./: CLAUDE.md  MARKDOWNGUIDE.md  Presentation  README.md
.github/workflows/: release.yml
Data/CAD/: pringle chip.glb
codes/2026-6-19/: README.md  binding.gyp  index.html  main.js  preload.js
codes/2026-6-20/: README.md  package-lock.json  package.json  renderer.js
codes/2026-6-20(1)/: README.md
codes/2026-6-20(1)/physics/: binding.cpp  physics.cpp  physics.h
codes/2026-6-20(2)/: README.md  index.html  main.js  package.json  preload.js  renderer.js
codes/2026-6-20/physics/: binding.cpp  physics.cpp  physics.h
codes/2026-6-21/: README.md
codes/2026-6-22/: README.md  index.html  renderer.js
codes/2026-6-22(1)/: CMakeLists.txt  README.md  renderer.js
codes/2026-6-22(1)/physics/: binding.cpp  physics.cpp  physics.h
codes/2026-6-22(2)/: README.md  index.html  main.js  renderer.js
codes/2026-6-22(2)/physics/: binding.cpp  physics.cpp  physics.h
codes/2026-6-22(3)/: README.md  index.html  renderer.js
codes/2026-6-22(3)/physics/: physics.cpp
codes/2026-6-22(4)/: CMakeLists.txt  README.md  index.html  renderer.js
codes/2026-6-23/: README.md  index.html  main.js  renderer.js
codes/2026-6-23(2)/: index.html  renderer.js
codes/2026-6-23(3)/: README.md  index.html  renderer.js
codes/2026-6-23(4)/: README.md  renderer.js
codes/2026-6-23/physics/: physics.cpp
codes/2026-6-25/: README.md  index.html  package.json  preload.js  renderer.js
codes/2026-6-25(1)/: README.md  index.html  renderer.js
codes/2026-6-25(2)/: README.md  index.html  main.js  package.json  renderer.js
codes/2026-6-25(2)/assets/: README.txt
codes/2026-6-25/assets/: README.txt
codes/2026-6-25/physics/: physics.h
codes/2026-6-27/: README.md  RELEASE_NOTES.md  index.html  renderer.js
codes/2026-6-28/: README.md  RELEASE_NOTES.md  renderer.js
codes/2026-6-29/: README.md  RELEASE_NOTES.md  main.js  preload.js  renderer.js
codes/2026-6-29(1)/: README.md  RELEASE_NOTES.md  renderer.js
codes/2026-6-29(10)/: .gitignore  credits.md  renderer.js
codes/2026-6-29(11)/: credits.md  index.html  main.js  package.json  preload.js
codes/2026-6-29(11)/physics/: physics.cpp
codes/2026-6-29(11)/scripts/: bundle.js
codes/2026-6-29(11)/windows/: credits-preload.js
codes/2026-6-29(2)/: CMakeLists.txt  README.md  RELEASE_NOTES.md  index.html  main.js  preload.js  renderer.js
codes/2026-6-29(2)/physics/: binding.cpp
codes/2026-6-29(2)/windows/: results.js
codes/2026-6-29(3)/: README.md  RELEASE_NOTES.md  index.html  main.js  package.json  preload.js  renderer.js
codes/2026-6-29(3)/assets/: Classic_table.glb  README.txt
codes/2026-6-29(3)/physics/: physics.cpp  physics.h
codes/2026-6-29(3)/scripts/: bundle.js
codes/2026-6-29(3)/windows/: results.html  settings.js
codes/2026-6-29(4)/: README.md  index.html  main.js  renderer.js
codes/2026-6-29(5)/: .gitignore  README.md  main.js  renderer.js
codes/2026-6-29(6)/: README.md  index.html  main.js  preload.js
codes/2026-6-29(6)/windows/: settings.html
codes/2026-6-29(7)/: index.html  main.js  package.json  renderer.js
codes/2026-6-29(7)/physics/: physics.cpp
codes/2026-6-29(7)/windows/: results.html
codes/2026-6-29(8)/: index.html  main.js  package.json  renderer.js
codes/2026-6-29(8)/assets/: Hyperbolic.glb
codes/2026-6-29(8)/windows/: results.js
codes/2026-6-29(9)/: README.md  index.html
codes/2026-6-29/physics/: physics.cpp
codes/2026-6-30/: .env.example  .eslintrc.json  .gitignore  .prettierrc.json  CONTRIBUTING.md  README.md  jest.config.js  jsconfig.json  main.js  package-lock.json  package.json  renderer.bundle.js  renderer.js
codes/2026-6-30/__tests__/: bundle.test.js  performance.test.js
codes/2026-7-1/: README.md  error-handler.js  index.html  renderer.js
codes/2026-7-1(2)/: .prettierignore  README.md  global.d.ts  index.html  main.js  package.json  physics-core.js
codes/2026-7-1(3)/: .gitignore  README.md  credits.md  jsconfig.json  package.json
codes/2026-7-1(4)/: README.md  RELEASE_NOTES.md  RELEASE_NOTES_LATEST.md  package.json  renderer.js  sim-worker.js
ideas/CEW/: ideas.md
ideas/KJH/: ideas.md
ideas/ORH/: ideas.md
ideas/SYJ/: ideas.md
(+26 files in other folders)
